--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,14 @@ body {
     font-size: 16px;
 }
 
+h1 {
+    font-size: 4rem;
+}
+
+h3 {
+    font-size: 2rem;
+}
+
 p {
     font-size: 1.125rem;
 }
