--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,10 +1,15 @@
 @import "../variable";
 @import "../animation";
 
-html, body, #root, section {
+html, body, #root {
     position: relative;
     width: 100%;
     height: 100%;
+}
+
+section {
+    position: relative;
+    min-height: 100%;
 }
 
 body {
@@ -38,14 +43,13 @@ body {
         background: linear-gradient($palette-black, rgba($palette-black, 0.9) 20%, rgba($palette-black, 0.6) 40%, rgba($palette-black, 0.4))
     }
     .container {
-        padding: 7rem;
+        padding: 10rem 7rem 5rem;
         margin-left: auto;
         margin-right: auto;
         max-width: 1100px;
         z-index: 1;
     }
     h1 {
-        font-size: 60px;
         animation-name: fadeInUp;
         animation-duration: 0.5s;
         animation-timing-function: ease-in-out;
@@ -142,9 +146,10 @@ body {
 
 #sec2{
     height: auto;
-    display: flex;
-    align-items: center;
+    min-height: 0;
+
     .container {
         height: 500px;
+        display: flex;
     }
 }
