--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+html, body {
+    overflow-x: hidden;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+}
+
 *, *::after {
     box-sizing: border-box;
 }
@@ -7,13 +16,12 @@ a, a:focus, a:visited {
     text-decoration: none;
 }
 
-body {
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-}
-
 h1 {
     font-size: 4rem;
+}
+
+h2{
+    font-size: 2.5rem;
 }
 
 h3 {
