--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,19 +1,35 @@
 @import "../variable";
 @import "../animation";
 
-html, body, #root {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
 section {
     position: relative;
-    min-height: 100%;
+    min-height: 100vh;
 }
+.section-header {
+    position: relative;
+    max-width: 1100px;
+    margin: auto;
+    padding: 3rem 7rem 4rem;
+    z-index: 1;
+    &::after {
+        position: absolute;
+        bottom: 4.5rem;
+        content: "";
+        width: 5rem;
+        max-width: 50%;
+        height: 6px;
+        transition-duration: 0.2s;
+        background-color: $palette-black;
+    }
 
-body {
-    overflow-y: auto;
+    h2 {
+        margin: 1.5rem 0;
+    }
+}
+.section-header:hover {
+    &::after {
+        width: 20rem;
+    }
 }
 
 .container {
@@ -27,11 +43,10 @@ body {
 
 #sec1 {
     color: $palette-white;
-    display: flex;
-    align-items: flex-end;
     background-image:url(/imgs/bgsec1.jpg);
 	background-size: cover;
-	background-repeat:no-repeat;
+    background-repeat:no-repeat;
+    background-attachment: fixed;
 
     &::after {
         position:absolute;
@@ -43,11 +58,17 @@ body {
         background: linear-gradient($palette-black, rgba($palette-black, 0.9) 20%, rgba($palette-black, 0.6) 40%, rgba($palette-black, 0.4))
     }
     .container {
+        position: fixed;
         padding: 10rem 7rem 5rem;
-        margin-left: auto;
-        margin-right: auto;
+        left: 50%;
+        bottom: 0;
+        transition-duration: 0.3s;
+        transform: translateX(-50%) scale(1);
         max-width: 1100px;
         z-index: 1;
+        &.shrinked {
+            transform: translateX(-50%) scale(0.95);
+        }
     }
     h1 {
         animation-name: fadeInUp;
@@ -128,21 +149,20 @@ body {
     }
 }
 
-
-.slope {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: linear-gradient(290deg, transparent 50%, $palette-grey-500 0) top left;
-    &::after {
-        position: absolute;
-        content: "";
-        height: 100%;
-        width: 100%;
-        background: linear-gradient(290deg, transparent calc(50% + 2px), $palette-black 0) top left;
-        z-index: 1;
-    }
-}
+// .slope {
+//     position: absolute;
+//     height: 100%;
+//     width: 100%;
+//     background: linear-gradient(290deg, transparent 50%, $palette-grey-500 0) top left;
+//     &::after {
+//         position: absolute;
+//         content: "";
+//         height: 100%;
+//         width: 100%;
+//         background: linear-gradient(290deg, transparent calc(50% + 2px), $palette-black 0) top left;
+//         z-index: 1;
+//     }
+// }
 
 #sec2{
     height: auto;
