Basic portfolio, move legacy assets to its folder

--- a/src/components/_animation.scss
+++ b/src/components/_animation.scss
@@ -62,3 +62,19 @@
     70% {transform: translateX(0); filter: brightness(1.5)}
     100% {transform: translateX(0); filter: brightness(1)}
 }
+
+.come-in {
+    transform: translateY(150px);
+    animation: come-in 1s ease forwards;
+}
+.come-in:nth-child(odd) {
+    animation-duration: 0.7s; /* So they look staggered */
+}
+.already-visible {
+    transform: translateY(0);
+    animation: none;
+}
+
+@keyframes come-in {
+    to { transform: translateY(0); }
+}
