--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,16 +7,16 @@
     width: 100%;
     height: 5.3125rem;
     color: $palette-white;
-    background-color: $palette-black;
+    background-color: $palette-black;    
+    box-shadow: 0 1px 8px $palette-black;
     z-index: 9;
-    opacity: 0.9;
-    transition-property: height;
-    transition-duration: 0.2s;
+    transition-duration: 0.3s;
     overflow: hidden;
 }
 
 .nav.scrolled {
-    height: 0;
+    top: -5.3125rem;
+    box-shadow: none;
 }
 
 .nav.stuck{
