--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -4,13 +4,13 @@
 section {
     position: relative;
     min-height: 100vh;
+    z-index: 1;
 }
 .section-header {
     position: relative;
     max-width: 1100px;
     margin: auto;
     padding: 3rem 7rem 4rem;
-    z-index: 1;
     &::after {
         position: absolute;
         bottom: 4.5rem;
@@ -47,6 +47,7 @@ section {
 	background-size: cover;
     background-repeat:no-repeat;
     background-attachment: fixed;
+    z-index: 0;
 
     &::after {
         position:absolute;
@@ -164,11 +165,29 @@ section {
 //     }
 // }
 
-#sec2{
+#sec2 {
     height: auto;
     min-height: 0;
 
     .container {
         height: 500px;
+    }
+}
+
+#sec3 {
+    .container {
+        max-width: 1400px;
+        margin: auto;
+    }
+    .container-inner {
+        display: flex;
+        padding: 12px 0;
+    }
+    .grid-container-left {
+        flex: 2;
+        margin-right: 12px;
+    }
+    .grid-container-right {
+        flex: 1
     }
 }
