--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -4,16 +4,15 @@
 section {
     position: relative;
     min-height: 100vh;
-    z-index: 1;
 }
 .section-header {
     position: relative;
-    max-width: 1100px;
+    max-width: 1400px;
     margin: auto;
     padding: 3rem 7rem 4rem;
     &::after {
         position: absolute;
-        bottom: 4.5rem;
+        top: 8.5rem;
         content: "";
         width: 5rem;
         max-width: 50%;
@@ -65,7 +64,7 @@ section {
         bottom: 0;
         transition-duration: 0.3s;
         transform: translateX(-50%) scale(1);
-        max-width: 1100px;
+        max-width: 1400px;
         z-index: 1;
         &.shrinked {
             transform: translateX(-50%) scale(0.95);
@@ -176,8 +175,10 @@ section {
 
 #sec3 {
     .container {
-        max-width: 1400px;
+        max-width: 1450px;
         margin: auto;
+        padding: 0 1.5rem 100px;
+        overflow: hidden;
     }
     .container-inner {
         display: flex;
@@ -189,5 +190,49 @@ section {
     }
     .grid-container-right {
         flex: 1
+    }
+}
+
+#sec4 {
+    background-image:url(/imgs/bgsec4.jpg);
+	background-size: cover;
+    background-repeat:no-repeat;
+    color: $palette-white;
+    &::after {
+        position:absolute;
+        content: "";
+        top: 0;
+        margin:0;
+        padding:0;
+        width:100%;
+        height:100%;
+        background: linear-gradient($palette-black, rgba($palette-black, 0.5) 20%, rgba($palette-black, 0))
+    }
+    .section-header {
+        z-index: 10;
+        padding-bottom: 0;
+    }
+    .section-header::after {
+        background-color: $palette-white;
+    }
+    .section-header h1 {
+        text-transform: uppercase;
+        margin-top: 2.5rem;
+        margin-bottom: 0;
+    }
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    max-width: 1400px;
+    margin: auto;
+    padding: 0 7rem 1rem;
+    color: $palette-grey-500;
+    z-index: 1;
+    &:hover {
+        color: $palette-white;
     }
 }
