--- a/src/components/Flyer/Flyer.scss
+++ b/src/components/Flyer/Flyer.scss
@@ -52,7 +52,8 @@
     .flyer-inner {
         float: right;
         padding-right: 25%;
-        max-width: 780px;
+        max-width: 800px;
+        padding-left: 1.5rem;
     }
 }
 
