--- a/src/components/PortfolioCard/PortfolioCard.scss
+++ b/src/components/PortfolioCard/PortfolioCard.scss
@@ -38,6 +38,7 @@
     p {
         font-size: 1rem;
         margin: 0 1rem 0 0;
+        flex-grow: 1;
     }
     .portfolio-card-btn {
         height: 3rem;
