--- a/src/components/_animation.scss
+++ b/src/components/_animation.scss
@@ -78,3 +78,8 @@
 @keyframes come-in {
     to { transform: translateY(0); }
 }
+
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
