--- a/src/components/ITS/ITS.scss
+++ b/src/components/ITS/ITS.scss
@@ -37,35 +37,41 @@
     opacity: 1 !important;
 }
 
-#sec1 {
-    color: $palette-white;
-    background-image:url(/imgs/bgsec1.jpg);
-	background-size: cover;
+#its-sec1 {
+    background-image:url(/imgs/its.png);
+    background-size: auto 110%;
+    background-position: center;
     background-repeat:no-repeat;
     z-index: 0;
+    color: $palette-white;
 
     &::after {
         position:absolute;
         content: "";
+        top: 0;
         margin:0;
         padding:0;
         width:100%;
         height:100%;
-        background: linear-gradient($palette-black, rgba($palette-black, 0.9) 20%, rgba($palette-black, 0.6) 40%, rgba($palette-black, 0.4))
+        animation-name: fadeIn;
+        animation-duration: 0.5s;
+        animation-delay: 0.5s;
+        animation-timing-function: ease-in-out;
+        animation-fill-mode: forwards;
+        background-color: $palette-black;
+        opacity: 0;
+        // background: linear-gradient($palette-white, rgba($palette-white, 0.9) 20%, rgba($palette-white, 0.6) 40%, rgba($palette-white, 0.4))
     }
     .container {
-        position: absolute;
-        padding: 10rem 5.7rem 5rem;
-        left: 50%;
-        bottom: 0;
-        transition-duration: 0.3s;
-        transform: translateX(-50%) scale(1);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
         z-index: 1;
-        &.shrinked {
-            transform: translateX(-50%) scale(0.95);
-        }
     }
-    h1 {
+    h2 {
+        margin-bottom: 0;
         animation-name: fadeInUp;
         animation-duration: 0.5s;
         animation-timing-function: ease-in-out;
@@ -74,9 +80,8 @@
         opacity: 0;
     }
     p.contentText {
-        font-size: 28px;
-        line-height: 1.5;
-        max-width: 610px;
+        // font-size: 28px;
+        margin-top: 0;
         animation-name: fadeInUp;
         animation-duration: 0.5s;
         animation-timing-function: ease-in-out;
