--- a/src/components/_animation.scss
+++ b/src/components/_animation.scss
@@ -83,3 +83,11 @@
     0% {opacity: 0;}
     100% {opacity: 1;}
 }
+
+@keyframes scrollAndFade {
+    0% {transform: translate(-50%, -30px); opacity: 0;}
+    // 10% {transform: translate(-50%, -30px); opacity: 1;}
+    40% {transform: translate(-50%, -5px); opacity: 1;}
+    80% {transform: translate(-50%, -5px); opacity: 0;}
+    100% {transform: translate(-50%, -5px); opacity: 0;}
+}
