--- a/src/components/ContactBubble/ContactBubble.scss
+++ b/src/components/ContactBubble/ContactBubble.scss
@@ -11,6 +11,11 @@ $btn-width: 56px;
     background: linear-gradient(to bottom right, rgba(0,0,0,0), rgba($palette-white,0.2) 30%, rgba($palette-white,0.6) 60%, rgba($palette-white,0.9) 80%, $palette-white);
     z-index: 8;
     display: none;
+    animation-name: fadeIn;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+
     &.show {
         display: block;
     }
