--- a/src/components/ContactBubble/ContactBubble.scss
+++ b/src/components/ContactBubble/ContactBubble.scss
@@ -28,6 +28,10 @@ $btn-width: 56px;
     z-index: 9;
 }
 
+.contact-bubble button {
+    background-color: $palette-grey-100;
+}
+
 .contact-bubble-cta {
     position: relative;
     z-index: 1;
@@ -53,7 +57,7 @@ $btn-width: 56px;
     transition-duration: 0.2s;
     z-index: 0;
     &.show1 {
-        height: 345px;
+        height: 270px;
     }
     &.show2 {
         overflow: visible;
@@ -96,18 +100,6 @@ $btn-width: 56px;
     }
 }
 
-// .contact-bubble-popup-item:hover {
-//     img {
-//         filter: grayscale(0);
-//     }
-//     &#github img{
-//         opacity: 1;
-//     }
-//     .contact-bubble-popup-item-text {
-//         width: 200px;
-//     }
-// }
-
 a.contact-bubble-popup-item-btn {
     position: relative;
     border-radius: 50%;
@@ -121,7 +113,6 @@ a.contact-bubble-popup-item-btn {
     img {
         width: 100%;
         height: 100%;
-        // filter: grayscale(1);
     }
 }
 
