--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -43,6 +43,21 @@
 	background-size: cover;
     background-repeat:no-repeat;
     z-index: 0;
+    &::before {
+        position:absolute;
+        content: "";
+        top: 0;
+        margin:0;
+        padding:0;
+        width:100%;
+        height:100%;
+        background-color: $palette-black;
+        animation-name: fadeOut;
+        animation-duration: 2s;
+        animation-timing-function: ease-in;
+        animation-fill-mode: forwards;
+        animation-delay: 0.5s;
+    }
 
     &::after {
         position:absolute;
