--- a/src/components/ScrollHint/ScrollHint.scss
+++ b/src/components/ScrollHint/ScrollHint.scss
@@ -4,7 +4,7 @@
     position: absolute;
     bottom: 4rem;
     width: 100%;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     overflow: hidden;
@@ -19,6 +19,10 @@
 
     .hide {
         opacity: 0;
+    }
+
+    @include screen-sm {
+        display: flex;
     }
 }
 
