--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,11 @@ h2{
 
 h3 {
     font-size: 2rem;
+    margin-bottom: 0;
+
+    @include screen-sm {
+        margin-bottom: 1em;
+    }
 }
 
 h4 {
