--- a/src/components/Flyer/Flyer.scss
+++ b/src/components/Flyer/Flyer.scss
@@ -3,13 +3,13 @@
 .flyer {
     position: absolute;
     bottom: 0;
-    height: 500px;
+    height: 450px;
     z-index: 0;
     vertical-align: top;
     padding: 5rem 0;
     background: $palette-grey-100;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
 
     &::after {
@@ -24,6 +24,8 @@
     .icons {
         display: flex;
         flex-wrap: wrap;
+        width: calc(100% + 2rem);
+        margin: 0 -1rem;
 
         @include screen-md {
             flex-wrap: nowrap;
@@ -31,6 +33,7 @@
     }
 
     @include screen-md {
+        height: 500px;
         display: inline-block;
     }
 }
@@ -40,12 +43,12 @@
     padding-top: 0rem;
     left: 0;
     width: 100%;
-    transform: translateX(-100%);
-    z-index: 4;
-    color: $palette-white;
+    transform: translateY(-100%);
+    z-index: 2;
+    color: $palette-black;
+    background-color: $palette-grey-100;
     overflow: hidden;
-    background: transparent;
-    animation-name: expandWidth;
+    animation-name: expandHeightDown;
     animation-duration: 0.8s;
     animation-timing-function: ease-in-out;
     animation-fill-mode: forwards;
@@ -55,11 +58,19 @@
         transform: translateX(0);
         z-index: 3;
         animation-name: none;
+        color: $palette-white;
         background: $palette-grey-100;
+        align-items: center;
+
+        &::after {
+            background: linear-gradient(352deg, transparent 20%, #1a1a1a 0) top left;
+
+            @include screen-md {
+                background: linear-gradient(290deg, transparent 25%, $palette-black 0) top left;
+            }
+        }
     }
     &::after {
-        background: linear-gradient(352deg, transparent 20%, #1a1a1a 0) top left;
-
         @include screen-md {
             background: linear-gradient(290deg, transparent 25%, $palette-black 0) top left;
         }
@@ -67,19 +78,29 @@
 
     .flyer-inner {
         float: right;
-        max-width: 800px;
+        max-width: 700px;
+        padding: 0 1.5rem;
+        
+        p.animated {
+            padding-bottom: 2rem;
+        }
 
         @include screen-md {
             padding-right: 28%;
             padding-left: 1.5rem;
+            max-width: 800px;
         }
     }
-
 
     @include screen-md {
         height: 500px;
         padding-top: 5rem;
         width: calc(50% + 92px);
+        z-index: 4;
+        transform: translateX(-100%);
+        color: $palette-white;
+        background: transparent;
+        animation-name: expandWidthAndShine;
     }
 }
 
@@ -88,19 +109,29 @@
     width: 100%;
     z-index: 2;
     color: $palette-black;
+    padding-top: 0;
+    padding-bottom: 2.5rem;
+
     &.noanimation {
         z-index: 1;
     }
 
     .flyer-inner {
+        padding: 0 1.5rem;
         max-width: 700px;
 
         @include screen-md {
+            padding-left: 0;
             padding-right: 3rem;
         }
     }
 
+    @include screen-sm {
+        padding-bottom: 5rem;
+    }
+
     @include screen-md {
+        padding-top: 5rem;
         width: calc(50% - 92px);
     }
 }
@@ -171,5 +202,31 @@
 
 .flyer-title-icon img{
     width: 150px;
-    filter: brightness(0) invert(1);
+    filter: brightness(0);
+
+    @include screen-md {
+        filter: brightness(0) invert(1);
+    }
+}
+
+.flyer .closeBtn {
+    position: absolute;
+    right: 0.5rem;
+    bottom: 0rem;
+    padding: 1rem;
+    z-index: 2;
+    opacity: 0.5;
+    color: $palette-black;
+
+    &:hover {
+        cursor: pointer;
+        opacity: 1;
+    }
+
+    @include screen-md {
+        right: 4rem;
+        top: 0;
+        bottom: auto;
+        color: $palette-white;
+    }
 }
