--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -265,20 +265,23 @@ footer {
     bottom: 0;
     left: 0;
     right: 0;
-    max-width: 1400px;
+    max-width: 1280px;
     margin: auto;
-    padding: 0 1.5rem 1rem;
+    padding: 0 1.5rem 0.5rem;
     color: $palette-grey-500;
+    font-size: 0.65rem;
     z-index: 10;
     &:hover {
         color: $palette-white;
     }
-    
+
     @include screen-sm {
         padding-left: 2.5rem;
     }
 
     @include screen-md {
+        font-size: 1rem;
         padding-left: 7rem;
+        padding-bottom: 1rem;
     }
 }
