--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -135,7 +135,7 @@
 
     #img-container{
         position:relative;
-        height:200px;
+        height:140px;
         display: inline-block;
         text-align: center;
         animation-name: fadeInUp;
@@ -144,40 +144,58 @@
         animation-fill-mode: forwards;
         animation-delay: 1s;
         opacity: 0;
+
+        @include screen-md {
+            height:200px;
+        }
     }
     #chu-logo{
-        width:180px;
+        width:120px;
         height:auto;
+
+        @include screen-md {
+            width:180px;
+        }
     }
     #hand{
         position:absolute;
         left:50%;
-        margin-top:-50px;
-        margin-left:-150px;
+        margin-top:-35px;
+        margin-left:-100px;
         opacity:0;
-        -webkit-transition: all 0.1s ease-in;
-        -moz-transition: all 0.1s ease-in;
-        -o-transition: all 0.1s ease-in;
         transition: all 0.1s ease-in;
+
+        @include screen-md {  
+            margin-top:-50px;
+            margin-left:-150px;
+        }
     }
     #hand img{
         position:relative;
-        width:60px;
-        height:auto
+        width:40px;
+        height:auto;
+
+        @include screen-md {  
+            width:60px;
+        }
     }
     #smile{
         position:absolute;
         left:50%;
-        margin-top:125px;
-        width:30px;
+        margin-top:110px;
+        width:32px;
         height:auto;
         opacity:0;
         transition: all 0.2s ease-in;
-        margin-top:165px;
-        width:50px;
         height:auto;
         transform:scaleY(-1);
-        margin-left:-25px;
+        margin-left:-17px;
+
+        @include screen-md {  
+            margin-top:165px;
+            width:50px;
+            margin-left:-25px;
+        }
     }
 }
 
