--- a/src/components/ContactBubble/ContactBubble.scss
+++ b/src/components/ContactBubble/ContactBubble.scss
@@ -8,13 +8,9 @@ $btn-width: 56px;
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom right, rgba(0,0,0,0), rgba($palette-white,0.2) 30%, rgba($palette-white,0.6) 60%, rgba($palette-white,0.9) 80%, $palette-white);
+    background: transparent;
     z-index: 8;
     display: none;
-    animation-name: fadeIn;
-    animation-duration: 0.5s;
-    animation-timing-function: ease-in-out;
-    animation-fill-mode: forwards;
 
     &.show {
         display: block;
@@ -33,7 +29,11 @@ $btn-width: 56px;
 }
 
 .contact-bubble button {
-    background-color: $palette-grey-100;
+    background-color: $palette-grey-200;
+
+    &:hover {
+        background-color: $palette-white;
+    }
 }
 
 .contact-bubble-cta {
@@ -53,7 +53,7 @@ $btn-width: 56px;
     position: absolute;
     bottom: 0;
     padding-bottom: $btn-width;
-    background-color: $palette-white;
+    background-color: $palette-grey-100;
     border-radius: 30px;
     width: $btn-width;
     height: 0;
@@ -67,27 +67,26 @@ $btn-width: 56px;
         overflow: visible;
         .contact-bubble-popup-item{
             &#linkedin .contact-bubble-popup-item-text {
-                width: 180px;
-            }
-            &#email .contact-bubble-popup-item-text {
-                width: 200px;
-            }
-            &#facebook .contact-bubble-popup-item-text {
-                width: 90px;
+                width: 140px;
             }
             &#github .contact-bubble-popup-item-text {
-                width: 185px;
+                width: 205px;
+            }
+            &#email .contact-bubble-popup-item-text {
+                width: 260px;
+            }
+            .contact-bubble-popup-item-text {
+                padding-left: 1rem;
+                padding-right: 3rem;
             }
         }
-        
     }
 }
 
 .contact-bubble-popup-item {
     position: relative;
     margin-bottom: 1rem;
-    overflow: hidden;
-    width: 256px;
+    width: 306px;
     float: right;
 
     &#linkedin {
@@ -113,16 +112,21 @@ a.contact-bubble-popup-item-btn {
     overflow: hidden;
     padding: 3px;
     float: right;
+    background-color: $palette-white;
 
     img {
         width: 100%;
         height: 100%;
     }
+
+    &:hover {
+        background-color: $palette-white;
+    }
 }
 
 .contact-bubble-popup-item-text {
     float: right;
-    line-height: $btn-width;
+    line-height: calc(#{$btn-width} - 2px);
     white-space: nowrap;
     margin: 0;
     transition-duration: 0.2s;
@@ -130,6 +134,12 @@ a.contact-bubble-popup-item-btn {
     font-weight: 700;
     width: 0;
     overflow: hidden;
+    background-color: $palette-white;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    margin-right: -$btn-width/2;
+    padding-bottom: 2px;
+    box-shadow: 1px 1px 5px $palette-grey-400;
 }
 
 @for $i from 1 through 4 {
