--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -98,22 +98,23 @@
         }
     }
 
-    a, a:focus, a:visited {
-        color: $palette-grey-400;
-    }
-
     a {
         width: 100%;
         height: 100%;
-        padding: 2rem 0;
-        text-transform: capitalize;
-        font-size: 1rem;
-        line-height: 1.3;
         vertical-align: top;
-    }
 
-    a:hover {
-        color: $palette-white;
+        button{
+            width: 100%;
+            padding: 2rem 0;
+            font-size: 1rem;
+            line-height: 1.3;
+            color: $palette-grey-400;
+            text-transform: capitalize;
+
+            &:hover {
+                color: $palette-white;
+            }
+        }
     }
 }
 
